# SkeletonFrame

./: .gitignore  LICENSE  README.md  pyproject.toml
src/skeleton/: __init__.py  connection.py  part.py  placement.py  point.py  skeleton.py  transform.py
src/transforms/: __init__.py  compose.py  operations.py  protocol.py
src/transforms/backends/: photoimage.py
src/viewer/: __init__.py  __main__.py  compose.py  graph.py  layout.py
tests/: test_composition.py  test_layout.py  test_photoimage.py  test_placement.py  test_render.py  test_skeleton.py  test_transforms.py
