[project]
name = "skeleton"
version = "0.1.0"
description = "An abstract framework for relating arbitrary images by shared data points."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skeleton", "src/transforms", "src/viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]